<resources>
    <string name="app_name">Conway`s Game of Life</string>
    <string name="conway_s_game_of_life">Conway\'s \nGame of Life</string>
    <string name="play_button">Play</string>
    <string name="quit_button">Quit</string>
    <string name="welcome_to_the_play_window">Welcome to the Play window</string>

    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="generations">Generation: %d</string>
    <string name="clear_grid">Clear Grid</string>
    <string name="next">Next</string>

    <string name="settings_button">Settings</string>
    <string name="save_button">Save</string>
    <string name="best_result">Best result:</string>
    <string name="choose_speed">Choose speed</string>
    <string name="blue_color_choice">Blue</string>
    <string name="green_color_choice">Green</string>
    <string name="red_color_choice">Red</string>
    <string name="restart">Restart</string>
</resources>
