<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/green"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/gameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/computer"
            android:gravity="center"
            android:text="@string/conway_s_game_of_life"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorMain"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="209dp" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/computer"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/play_button"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="334dp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/computer"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/settings_button"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="334dp" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorMain"
            android:fontFamily="@font/computer"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/quit_button"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="432dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>